# BlePeripheralRs

./: README.md
ble_peripheral/: Cargo.toml
ble_peripheral/src/: main.rs
ble_peripheral/src/bluetooth/: message.rs  mod.rs  test.rs
bluetooth_low_energy/: Cargo.toml
bluetooth_low_energy/src/: main.rs
bluetooth_low_energy/src/bluetooth/: message.rs  mod.rs  test.rs
