[package]
name = "ble_peripheral"
version = "0.1.0"
edition = "2021"

[dependencies]
bluer = { version = "0.17.3", features = ["full"] }
futures = "0.3.30"
tokio = { version = "1.38.3", features = ["full"] }
uuid = { version = "1.10.0" }
env_logger = "0.11.5"
log = "0.4.22"
image = { version = "0.25.1", default-features = false, features = [
  "jpeg",
  "webp",
] }
